--- a/templates/image.html
+++ b/templates/image.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+{% include 'head.html' %}
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
+{% extends 'bootstrap/base.html' %}
+{% import "bootstrap/wtf.html" as wtf %}
+{% block content %}
 <body>
 <section>
   <div class="container-fluid">
     <div class="row" style="height: 100%;">
-      <div class="col-lg" style="padding: 0 4rem;">
+      <div class="col-lg-9 mx-auto" style="padding: 0 4rem;">
         <div style="padding: 4rem 0">
           <input class="form-control">
         </div>
-        <div class="row" style="height: 50%; overflow-y: scroll;">
+        <div class="row" style="height: 50%;">
 <!--           <div class="col-lg-2" style=" margin-left:0rem;">-->
 <!--            <div style="box-shadow: 1px 1px 5px#888888; width: 150px; height: 180px;  margin-bottom:3rem;">-->
 <!--              <h2>New</h2>-->
@@ -22,15 +26,11 @@
            {% if item.index%4 == 0   %}
             {% if item.index == 0 %}
             <div class="col-lg-2" style=" margin-left:0rem;">
-             <a href="{{url_for('add_new_story')}}"  style="text-decoration: none; color:green; ">
+             <a href="{{url_for('add_new_story')}}"  style="text-decoration: none; color:orange; ">
             <div style=" box-shadow: 1px 1px 5px#888888; width: 150px; height: 180px;  margin-bottom:2rem;">
               <div class="justify-content-center d-flex">
-                <h3 style="text-decoration:none; margin: 2.3rem 0;">New</h3>
+                <h3 style="text-decoration:none; margin: 6rem 0;">Upload</h3>
               </div>
-                 <hr/>
-                 <div class="justify-content-center d-flex" style="margin-top: 1rem;">
-                      <p>Add a new story</p>
-                  </div>
             </div>
                </a>
         </div>
@@ -73,4 +73,5 @@
   </div>
 </section>
 </body>
+{% endblock %}
 </html>
