--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
         <a style="text-decoration: none;" href="{{url_for('home')}}">< Back</a>
           <h2>{{story_name}}</h2><br>
         <div class="title d-flex justify-content-between" style="width:50%;">
-           <a href="" style="color:red;"><p>Delete Story</p></a>
+           <a href="{{url_for('delete_story', id=story_id)}}" style="color:red;"><p>Delete Story</p></a>
           <a href="{{url_for('edit_story', id=story_id)}}" style="color:green;"><p>Edit Story</p></a>
           <a href="{{url_for('upload_story_art')}}" style="color:orange;"><p>Add Art</p></a>
         </div><br>
